<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Trending Movies</string>
    <string name="content_authority">com.movies.chris.trendingmovies.data.provider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="img_desc_poster">Image View Poster</string>
    <string name="img_desc_user_photo">User Google profile picture</string>

    <!--SaveInstanceState keys -->
    <string name="state_key_layout_manager">layout_manager_key</string>
    <!--SharedPreferences keys -->
    <string name="pref_key_sort_by">.MovieListActivity.sortBy</string>
    <!--Drawer Layout Actions-->
    <string name="action_top_rated">Top Rated</string>
    <string name="action_most_popular">Most Popular</string>
    <string name="action_now_playing">Now Playing</string>
    <string name="action_upcoming">Upcoming</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_recents">Recents</string>

    <string name="search">Search</string>
    <string name="error_msg">An error has occurred. Please try again.</string>
    <string name="txt_load_more" tools:keep="@string/txt_load_more">Load more</string>
    <string name="key_query_uri">QUERY_URI_EXTRA</string>
    <string name="key_sort_by">SORT_BY_EXTRA</string>
    <string name="key_page_number">PAGE_NUMBER_EXTRA</string>
    <string name="exception_drawer_item_not_implemented">Drawer item not implemented</string>
    <string name="key_sync_success">event.sync.success</string>
    <string name="key_movie_detail">movie_detail_key</string>
    <string name="key_trailer_id">trailer_id_key</string>
    <string name="key_scroll_view_postition">scroll_view_position_key</string>
    <string name="iv_backdrop_image_description">Backdrop Image</string>
    <string name="movie_reviews">Reviews:</string>
    <string name="movie_description">Synopsis:</string>
    <string name="movie_rating">Rating:</string>
    <string name="tv_genres_base">Genres:</string>
    <string name="release_date">Release date:</string>
    <string name="youtube_player_error">Error initializing YouTube player: %s</string>
    <string name="transition_movie_poster">movie poster transition</string>
    <string name="transition_pb">progress bar transition</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="noFavorites">No favorites to show!</string>
    <string name="powered_by_tmdb">Powered by The Movie Database</string>
    <string name="img_desc_youtube_thumb">Youtube video preview image</string>

</resources>
